@@ -4,6 +4,14 @@ Change Log
 
 Version 2.3.1 -
 ---------------
+- POSSIBLE API CHANGE: this release fixes a bug when results names were
+  attached to a MatchFirst or Or object containing an And object.
+  Previously, a results name on an And object within an enclosing MatchFirst
+  or Or could return just the first token in the And. Now, all the tokens
+  matched by the And are correctly returned. This may result in subtle
+  changes in the tokens returned if you have this condition in your pyparsing
+  scripts.
+
 - Added unicode sets to pyparsing_unicode for Latin-A and Latin-B ranges.
 
 - Added ability to define custom unicode sets as combinations of other sets
@@ -27,7 +35,8 @@ Version 2.3.1 -
   results.
 
 - Removed distutils fallback in setup.py. If installing the package fails,
-  please update to the latest version of setuptools.
+  please update to the latest version of setuptools. Plus overall project code
+  cleanup (CRLFs, whitespace, imports, etc.), thanks Jon Dufresne!
 
 
 Version 2.3.0 - October, 2018
